# namespaces-rs

./: Cargo.toml  README.md
src/: advanced.rs  basic.rs
